getSeasonalIngredients - end point finished